# SchoolProjectCodes

./: README.md
InternshipKvernelandMechatronicsBV/: README.md
InternshipKvernelandMechatronicsBV/Shift1/uniLoggerMain/include/: cameraControl.h  utils.hpp
InternshipKvernelandMechatronicsBV/Shift1/uniLoggerMain/src/: cameraControl.cpp  main.cpp
InternshipKvernelandMechatronicsBV/Shift2/: README.md  dummy.txt
InternshipKvernelandMechatronicsBV/Shift2/fileOrganizing/: CMakeLists.txt  notes.txt
InternshipKvernelandMechatronicsBV/Shift2/fileOrganizing/include/: cameraController.h  cameraGrabber.h  dataProcessor.h  dataViewer.h  functionController.h
InternshipKvernelandMechatronicsBV/Shift2/fileOrganizing/src/: cameraController.cpp  cameraGrabber.cpp  dataProcessor.cpp  dataViewer.cpp  functionController.cpp  main.cpp  threadUtilities.cpp
InternshipKvernelandMechatronicsBV/Shift2/uniLogger/: CMakeLists.txt
InternshipKvernelandMechatronicsBV/Shift2/uniLogger/include/: GLViewer.hpp  ZEDModel.hpp  cameraController.h  cameraGrabber.h  dataProcessor.hpp  dataViewer.hpp  filter.hpp  functionController.h  logCout.h  parseController.h  planeController.hpp  threadUtilities.hpp  utilities.hpp
InternshipKvernelandMechatronicsBV/Shift2/uniLogger/src/: GLViewer.cpp  cameraController.cpp  cameraGrabber.cpp  dataProcessor.cpp  dataViewer.cpp  filter.cpp  functionController.cpp  main.cpp  parseController.cpp  planeController.cpp  utilities.cpp
InternshipKvernelandMechatronicsBV/Shift2/uniLoggerCodeWorking/include/: cameraGrabber.h  dataProcessor.hpp  dataViewer.hpp  parseController.h
InternshipKvernelandMechatronicsBV/Shift2/uniLoggerCodeWorking/src/: cameraController.cpp  cameraGrabber.cpp  dataProcessor.cpp  dataViewer.cpp  functionController.cpp  main.cpp  threadUtilities.cpp
InternshipKvernelandMechatronicsBV/Shift2/uniLoggerShift2/include/: cameraController.h  cameraGrabber.h  dataProcessor.hpp  dataViewer.hpp  functionController.h  parseController.h  radius_outlier_removal.hpp
InternshipKvernelandMechatronicsBV/Shift2/uniLoggerShift2/src/: cameraController.cpp  cameraGrabber.cpp  dataProcessor.cpp  dataViewer.cpp  functionController.cpp  main.cpp  parseController.cpp  radius_outlier_removal.cpp
InternshipKvernelandMechatronicsBV/uniLoggerMain/: CMakeLists.txt
InternshipKvernelandMechatronicsBV/uniLoggerMain/include/: cameraControl.h
InternshipKvernelandMechatronicsBV/uniLoggerMain/src/: cameraControl.cpp  main.cpp
uniLoggerMain/: notes.txt
uniLoggerMain/src/: GLViewer.cpp
